# docgl

./: Bounce.cpp  Build CodeBlocks - Unix Makefiles Linux32.sh  Build KDevelop3 Linux32.sh  Build MinGW Makefile.bat  Build Unix Makefiles Linux32.sh  Build Unix Makefiles MacOSX.sh  Build Visual Studio 11 2012 Win64.bat  Build Visual Studio 12 2013 Win64.bat  Build Visual Studio 12 2013.bat  Build Visual Studio 14 2015 Win64.bat  Build Visual Studio 14 2015.bat  CMakeLists.txt  Docgl.h  DocglWindow.h  DocglWindowCallback.h  Docglx.h  Docwgl.h  GLXBasics.c  GLXBasics.cpp  Main.cpp  Makefile  SuperFormula.cpp  Tools.h  build-linux-x86-codeblocks.sh  build-linux-x86-make.sh  build-macosx-make.sh  build-macosx-xcode.sh  build-win32-msvc10-express.bat  build-win32-msvc10-x64.bat  build-win32-msvc10.bat  build-win32-msvc9-express.bat  build-win32-msvc9-x64.bat  build-win32-msvc9.bat  license.txt
